QQmlMetaType: Don't duplicate notify signals for extended types

We have to add the methods first, so that the properties can be
associated with their proper notification signals once we add them. If
we add the properties first, the "missing" notification signals are
synthesized.

Fixes: QTBUG-101155
Change-Id: I1aacbf33a24f7a98d05dece77c804bd7cba8a041
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit 57614680f760068c1db39888beba46944f409ff0)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>