tests/auto/qml/qqmllanguage/data/foreignExtended.qml
@@ -5,12 +5,17 @@ QtObject {
     property Foreign foreign: Foreign {
         objectName: "foreign"
     }
-    property Extended extended: Extended {}
+    property Extended extended: Extended {
+        objectName: "extended"
+        property int changeCount: 0
+        onExtensionChanged: ++changeCount
+    }
     property ForeignExtended foreignExtended: ForeignExtended {
         objectName: "foreignExtended"
     }
 
     property int extendedBase: extended.base
+    property int extendedChangeCount: extended.changeCount
 
     property int extendedInvokable: extended.invokable()
     property int extendedSlot: extended.slot()
